# esvr2_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: camera_info.yml  custom_config.yaml  custom_param.yaml  general.yml
include/esvr2_ros/: Esvr2ROSNode.h  PivotControllerROSNode.h  PoseStateROSNode.h  VideoLoaderROSNode.h
launch/: default.launch
launch/other/: blackmagic_camera.launch  esvr2.launch  franka_pivot_control.launch  screen_player.launch  simulation.launch
launch/user_study/: setup_screen_box-trainer.launch  setup_vr_box-trainer.launch  setup_vr_franka.launch  setup_vr_simulation.launch
scripts/: keyboardPose.py
src/: Esvr2ROSNode.cpp  PivotControllerROSNode.cpp  PoseStateROSNode.cpp  VideoLoaderROSNode.cpp
src/esvr2_ros/: Esvr2ROSNode.cpp  PivotControllerROSNode.cpp  VideoLoaderROSNode.cpp
src/screen_player/: ScreenPlayer.cpp
